# sicktoolbox-python

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  convert_old_log.py  lms200.py  lms_runner.py  sicktoolbox.cpp  slam.py
lms200/: __init__.py  lms200.py  messages.py  playback.py  plotter.py  slam.py
lms_config/: Makefile  lms_config
lms_config/.deps/: main.Po
lms_config/.libs/: lms_config
logs/2017_Aug_15/: 22;32;12.log.xz  23;30;01.log.xz  23;50;38.log.xz
logs/2017_Aug_18/: 23;29;31.log.xz
logs/2017_Aug_27/: 12;14;05.log.xz
logs/2017_Sep_01/: 13;03;29.log.xz  13;17;07.log.xz  17;31;39.log.xz
logs/2017_Sep_16/: 12;17;56.log.xz  13;28;47.log.xz
logs/2017_Sep_27/: 18;13;53.log.xz  20;13;39.log.xz  20;15;34.log.xz  20;15;44.log.xz  20;17;52.log.xz
maps/: 20;13;09.log map.pgm
tests/: CMakeLists.txt  sicktoolbox.cpp
